--- a/A_Measure_of_Linear_Relationship.ipynb
+++ b/A_Measure_of_Linear_Relationship.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#A-Measure-of-Linear-Relationship\" data-toc-modified-id=\"A-Measure-of-Linear-Relationship-1\">A Measure of Linear Relationship</a></span><ul class=\"toc-item\"><li><span><a href=\"#Pearson’s-product-moment-correlation-with-Jupyter-Notebook\" data-toc-modified-id=\"Pearson’s-product-moment-correlation-with-Jupyter-Notebook-1.1\">Pearson’s product-moment correlation with Jupyter Notebook</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Import-necessary-libraries\" data-toc-modified-id=\"Import-necessary-libraries-3\">Import necessary libraries</a></span></li><li><span><a href=\"#Finding-the-regression-line\" data-toc-modified-id=\"Finding-the-regression-line-4\">Finding the regression line</a></span></li><li><span><a href=\"#Finding-the-Pearson's-correlation-coefficient\" data-toc-modified-id=\"Finding-the-Pearson's-correlation-coefficient-5\">Finding the Pearson's correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#For-population-data\" data-toc-modified-id=\"For-population-data-5.1\">For population data</a></span></li><li><span><a href=\"#For-sample-data\" data-toc-modified-id=\"For-sample-data-5.2\">For sample data</a></span></li></ul></li><li><span><a href=\"#Finding-mathematically\" data-toc-modified-id=\"Finding-mathematically-6\">Finding mathematically</a></span><ul class=\"toc-item\"><li><span><a href=\"#Finding-r-mathematically\" data-toc-modified-id=\"Finding-r-mathematically-6.1\">Finding r mathematically</a></span></li></ul></li><li><span><a href=\"#Degree-of-freedom-and-critical-values\" data-toc-modified-id=\"Degree-of-freedom-and-critical-values-7\">Degree of freedom and critical values</a></span></li><li><span><a href=\"#The-least-squares-regression-line\" data-toc-modified-id=\"The-least-squares-regression-line-8\">The least-squares regression line</a></span></li><li><span><a href=\"#The-mean-point-on-the-line-of-best-fit\" data-toc-modified-id=\"The-mean-point-on-the-line-of-best-fit-9\">The mean point on the line of best fit</a></span></li><li><span><a href=\"#Real-life-example\" data-toc-modified-id=\"Real-life-example-10\">Real-life example</a></span></li><li><span><a href=\"#Finding-r-from-more-than-two-arrays\" data-toc-modified-id=\"Finding-r-from-more-than-two-arrays-11\">Finding r from more than two arrays</a></span></li><li><span><a href=\"#Heat-map\" data-toc-modified-id=\"Heat-map-12\">Heat map</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-13\">Conclusion</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-14\">Reference</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#A-Measure-of-Linear-Relationship\" data-toc-modified-id=\"A-Measure-of-Linear-Relationship-1\">A Measure of Linear Relationship</a></span><ul class=\"toc-item\"><li><span><a href=\"#Pearson’s-product-moment-correlation-with-Jupyter-Notebook\" data-toc-modified-id=\"Pearson’s-product-moment-correlation-with-Jupyter-Notebook-1.1\">Pearson’s product-moment correlation with Jupyter Notebook</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span><ul class=\"toc-item\"><li><span><a href=\"#Import-necessary-libraries\" data-toc-modified-id=\"Import-necessary-libraries-2.1\">Import necessary libraries</a></span></li></ul></li><li><span><a href=\"#Finding-the-regression-line-using-linregress\" data-toc-modified-id=\"Finding-the-regression-line-using-linregress-3\">Finding the regression line using <code>linregress</code></a></span></li><li><span><a href=\"#Pearson's-correlation-coefficient\" data-toc-modified-id=\"Pearson's-correlation-coefficient-4\">Pearson's correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#For-population-data\" data-toc-modified-id=\"For-population-data-4.1\">For population data</a></span></li><li><span><a href=\"#For-sample-data\" data-toc-modified-id=\"For-sample-data-4.2\">For sample data</a></span></li></ul></li><li><span><a href=\"#Finding-Pearson's-correlation-coefficient\" data-toc-modified-id=\"Finding-Pearson's-correlation-coefficient-5\">Finding Pearson's correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Mathematically-using-Numpy\" data-toc-modified-id=\"Mathematically-using-Numpy-5.1\">Mathematically using Numpy</a></span></li><li><span><a href=\"#Using-scipy.stats.pearsonr\" data-toc-modified-id=\"Using-scipy.stats.pearsonr-5.2\">Using <code>scipy.stats.pearsonr</code></a></span></li></ul></li><li><span><a href=\"#Degree-of-freedom-and-critical-values\" data-toc-modified-id=\"Degree-of-freedom-and-critical-values-6\">Degree of freedom and critical values</a></span></li><li><span><a href=\"#The-least-squares-regression-line\" data-toc-modified-id=\"The-least-squares-regression-line-7\">The least-squares regression line</a></span></li><li><span><a href=\"#The-mean-point-on-the-line-of-best-fit\" data-toc-modified-id=\"The-mean-point-on-the-line-of-best-fit-8\">The mean point on the line of best fit</a></span></li><li><span><a href=\"#Real-life-example\" data-toc-modified-id=\"Real-life-example-9\">Real-life example</a></span></li><li><span><a href=\"#Finding-r-from-more-than-two-arrays\" data-toc-modified-id=\"Finding-r-from-more-than-two-arrays-10\">Finding r from more than two arrays</a></span></li><li><span><a href=\"#Heat-map\" data-toc-modified-id=\"Heat-map-11\">Heat map</a></span></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-12\">Conclusion</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-13\">Reference</a></span></li></ul></div>"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import necessary libraries"
+    "## Import necessary libraries"
    ]
   },
   {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "loss  4  12  18  21  24"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding the regression line"
+    "# Finding the regression line using `linregress`"
    ]
   },
   {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding the Pearson's correlation coefficient"
+    "# Pearson's correlation coefficient"
    ]
   },
   {
@@ -349,7 +349,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding mathematically\n",
+    "# Finding Pearson's correlation coefficient \n",
     "\n",
     "Let's use sample data."
    ]
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "loss  4  12  17"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Means of gain and loss are:"
+    "## Mathematically using Numpy"
    ]
   },
   {
@@ -450,139 +450,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "8.0\n",
-      "11.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "gain_mean, loss_mean=df.T.mean()\n",
-    "print(gain_mean)\n",
-    "print(loss_mean)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Standard deviations are:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.605551275463989\n",
-      "6.557438524302\n"
-     ]
-    }
-   ],
-   "source": [
-    "gain_std, loss_std = df.T.std(ddof=1)\n",
-    "print(gain_std)\n",
-    "print(loss_std)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`ddf=0` is for population and `ddf=1` is for sample. Since we use all data we use 0 here."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gain</th>\n",
-       "      <th>loss</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>gain</th>\n",
-       "      <td>13.0</td>\n",
-       "      <td>22.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>loss</th>\n",
-       "      <td>22.0</td>\n",
-       "      <td>43.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      gain  loss\n",
-       "gain  13.0  22.0\n",
-       "loss  22.0  43.0"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cov_xy=df.T.cov()\n",
-    "cov_xy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Finding r mathematically"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -590,80 +461,51 @@
        "0.93050085576319"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cov_xy.iloc[0,1]/(gain_std*loss_std)"
+    "# Means\n",
+    "gain_mean, loss_mean=df.T.mean()\n",
+    "\n",
+    "# Standard deviations\n",
+    "gain_std, loss_std = df.T.std(ddof=1)\n",
+    "\n",
+    "# Covariance\n",
+    "cov_xy=df.T.cov()\n",
+    "\n",
+    "# Pearson correlation coefficient\n",
+    "cov_xy.iloc[0,1]/(gain_std*loss_std)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating arrays from the dataFrame."
+    "In Pandas, `ddf=0` is for population and `ddf=1` is for sample. Since we use all data we use 0 here."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 5  7 12]\n",
-      "[ 4 12 17]\n"
-     ]
-    }
-   ],
    "source": [
-    "num = df.to_numpy()\n",
-    "print(num[0])\n",
-    "print(num[1])"
+    "## Using `scipy.stats.pearsonr`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9305008557631899"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "from numpy import corrcoef\n",
-    "corrcoef(num[0],num[1])[0,1]"
+    "# https://gist.github.com/shinokada/c8a5f8539f4ab466a2f5d1af631b6da4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +514,7 @@
        "0.9305008557631897"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,43 +529,6 @@
    "metadata": {},
    "source": [
     "`pearsonr` returns Pearson's product-moment correlation coefficient and p-value."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://gist.github.com/shinokada/278a95b2e5dbf61bccbf15ba40f25ed4\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://gist.github.com/shinokada/c8a5f8539f4ab466a2f5d1af631b6da4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r: 0.9305, p-value: 0.2387\n"
-     ]
-    }
-   ],
-   "source": [
-    "r, pval = pearsonr(df.iloc[0,:],df.iloc[1,:])\n",
-    "print(f'r: {r:.4f}, p-value: {pval:.4f}')"
    ]
   },
   {
