--- a/Beginners_Guide_to_Jupyter_Notebook.ipynb
+++ b/Beginners_Guide_to_Jupyter_Notebook.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Beginners-Guide-to-Jupyter-Notebook\" data-toc-modified-id=\"Beginners-Guide-to-Jupyter-Notebook-1\">Beginners Guide to Jupyter Notebook</a></span><ul class=\"toc-item\"><li><span><a href=\"#From-the-setup-to-the-descriptive-statistics\" data-toc-modified-id=\"From-the-setup-to-the-descriptive-statistics-1.1\">From the setup to the descriptive statistics</a></span></li></ul></li><li><span><a href=\"#Table-of-Contents\" data-toc-modified-id=\"Table-of-Contents-2\">Table of Contents</a></span></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-3\">Introduction</a></span></li><li><span><a href=\"#Installing-Anaconda\" data-toc-modified-id=\"Installing-Anaconda-4\">Installing Anaconda</a></span></li><li><span><a href=\"#Jupyter-Notebook-Help-and-Shortcuts\" data-toc-modified-id=\"Jupyter-Notebook-Help-and-Shortcuts-5\">Jupyter Notebook Help and Shortcuts</a></span></li><li><span><a href=\"#Python-libraries\" data-toc-modified-id=\"Python-libraries-6\">Python libraries</a></span></li><li><span><a href=\"#Finding-data\" data-toc-modified-id=\"Finding-data-7\">Finding data</a></span></li><li><span><a href=\"#Importing-data\" data-toc-modified-id=\"Importing-data-8\">Importing data</a></span></li><li><span><a href=\"#Data-Attributes\" data-toc-modified-id=\"Data-Attributes-9\">Data Attributes</a></span><ul class=\"toc-item\"><li><span><a href=\"#Missing-Value\" data-toc-modified-id=\"Missing-Value-9.1\">Missing Value</a></span></li><li><span><a href=\"#Dealing-with-NaN-values\" data-toc-modified-id=\"Dealing-with-NaN-values-9.2\">Dealing with NaN values</a></span><ul class=\"toc-item\"><li><span><a href=\"#Drop-Nan\" data-toc-modified-id=\"Drop-Nan-9.2.1\">Drop Nan</a></span></li><li><span><a href=\"#Filling-up-NaN\" data-toc-modified-id=\"Filling-up-NaN-9.2.2\">Filling up NaN</a></span></li></ul></li></ul></li><li><span><a href=\"#How-to-deal-categorical-data\" data-toc-modified-id=\"How-to-deal-categorical-data-10\">How to deal categorical data</a></span></li><li><span><a href=\"#Descriptive-Statistics\" data-toc-modified-id=\"Descriptive-Statistics-11\">Descriptive Statistics</a></span></li><li><span><a href=\"#Basic-plotting\" data-toc-modified-id=\"Basic-plotting-12\">Basic plotting</a></span></li><li><span><a href=\"#Matplotlib\" data-toc-modified-id=\"Matplotlib-13\">Matplotlib</a></span></li><li><span><a href=\"#Seaborn\" data-toc-modified-id=\"Seaborn-14\">Seaborn</a></span></li><li><span><a href=\"#Reference\" data-toc-modified-id=\"Reference-15\">Reference</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Beginners Guide to Jupyter Notebook\n",
@@ -3377,6 +3387,19 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": false,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
