--- a/Spearman_part_2.ipynb
+++ b/Spearman_part_2.ipynb
@@ -7,16 +7,16 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Inspecting-Spearman's-rank-correlation-coefficient\" data-toc-modified-id=\"Inspecting-Spearman's-rank-correlation-coefficient-1\">Inspecting Spearman's rank correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Discover-the-strength-of-monotonic-relation-Part-2\" data-toc-modified-id=\"Discover-the-strength-of-monotonic-relation-Part-2-1.1\">Discover the strength of monotonic relation Part 2</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-4\">Pandas corr</a></span></li><li><span><a href=\"#Finding-mathematically\" data-toc-modified-id=\"Finding-mathematically-5\">Finding mathematically</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-5.1\">Ranking data</a></span></li></ul></li><li><span><a href=\"#With-Numpy\" data-toc-modified-id=\"With-Numpy-6\">With Numpy</a></span></li><li><span><a href=\"#With-Pandas\" data-toc-modified-id=\"With-Pandas-7\">With Pandas</a></span></li><li><span><a href=\"#Comparing-Pearson-and-Spearman-correlation-coefficient\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman-correlation-coefficient-8\">Comparing Pearson and Spearman correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Investigating-linear-relation\" data-toc-modified-id=\"Investigating-linear-relation-8.1\">Investigating linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic-relation\" data-toc-modified-id=\"Investigating-quadratic-relation-8.2\">Investigating quadratic relation</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-8.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-9\">Conclusion</a></span></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#The-Subtlety-of-Spearman's-rank-correlation-coefficient\" data-toc-modified-id=\"The-Subtlety-of-Spearman's-rank-correlation-coefficient-1\">The Subtlety of Spearman's rank correlation coefficient</a></span><ul class=\"toc-item\"><li><span><a href=\"#Untold-parts-of-monotonic-relation\" data-toc-modified-id=\"Untold-parts-of-monotonic-relation-1.1\">Untold parts of monotonic relation</a></span></li></ul></li><li><span><a href=\"#Introduction\" data-toc-modified-id=\"Introduction-2\">Introduction</a></span></li><li><span><a href=\"#Spearman's-Rank-Correlation-with--identical-values\" data-toc-modified-id=\"Spearman's-Rank-Correlation-with--identical-values-3\">Spearman's Rank Correlation with  identical values</a></span></li><li><span><a href=\"#Pandas-corr\" data-toc-modified-id=\"Pandas-corr-4\">Pandas corr</a></span></li><li><span><a href=\"#Finding-mathematically-Spearman's-Rank-Correlation\" data-toc-modified-id=\"Finding-mathematically-Spearman's-Rank-Correlation-5\">Finding mathematically Spearman's Rank Correlation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Ranking-data\" data-toc-modified-id=\"Ranking-data-5.1\">Ranking data</a></span></li></ul></li><li><span><a href=\"#With-Numpy\" data-toc-modified-id=\"With-Numpy-6\">With Numpy</a></span></li><li><span><a href=\"#With-Pandas\" data-toc-modified-id=\"With-Pandas-7\">With Pandas</a></span></li><li><span><a href=\"#Comparing-Pearson-and-Spearman's-Rank-Correlation\" data-toc-modified-id=\"Comparing-Pearson-and-Spearman's-Rank-Correlation-8\">Comparing Pearson and Spearman's Rank Correlation</a></span><ul class=\"toc-item\"><li><span><a href=\"#Investigating-linear-relation\" data-toc-modified-id=\"Investigating-linear-relation-8.1\">Investigating linear relation</a></span></li><li><span><a href=\"#Investigating-quadratic-relation\" data-toc-modified-id=\"Investigating-quadratic-relation-8.2\">Investigating quadratic relation</a></span></li><li><span><a href=\"#Investigating-cubic-function\" data-toc-modified-id=\"Investigating-cubic-function-8.3\">Investigating cubic function</a></span></li></ul></li><li><span><a href=\"#Conclusion\" data-toc-modified-id=\"Conclusion-9\">Conclusion</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inspecting Spearman's rank correlation coefficient \n",
+    "# The Subtlety of Spearman's rank correlation coefficient \n",
     "\n",
-    "## Discover the strength of monotonic relation Part 2\n"
+    "## Untold parts of monotonic relation\n"
    ]
   },
   {
@@ -25,13 +25,15 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In the last article, I wrote about Spearman's rank correlation coefficient using ordinal data. I explored it by using four different methods, simplified formula, general formula, Pandas `corr` and manual calculation.\n",
+    "In this article, I'd like to explore the Spearman's rank correlation coefficient using data that includes identical values. I also reveal how the Spearman value changes depending on the nature of functions.\n",
+    "\n",
+    "In the [`scipy.stats.spearmanr`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.spearmanr.html) document, using ordinal data is not explicitly stated. I'd like to dig about it as well.\n",
+    "\n",
+    "If you are interested in reading about Spearman's rank correlation coefficient using ordinal data. Please refer to the following article. It explains finding Spearman's value using four different methods, simplified formula, general formula, Pandas `corr` and manual calculation.\n",
     "\n",
     "[Link](https://towardsdatascience.com/discover-the-strength-of-monotonic-relation-850d11f72046)\n",
     "\n",
-    "In this article, I'd like to explore the Spearman's rank correlation coefficient using data that includes __identical values__. I also compare differences between the Spearman and Pearson vaules.\n",
-    "\n",
-    "In the [`scipy.stats.spearmanr`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.spearmanr.html) document, using ordinal data is not explicitly stated. I'd like to dig about it as well.\n"
+    "\n"
    ]
   },
   {
@@ -223,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Finding mathematically\n",
+    "# Finding mathematically Spearman's Rank Correlation \n",
     "\n",
     "$$\n",
     "\\begin{align}\n",
@@ -432,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comparing Pearson and Spearman correlation coefficient\n",
+    "# Comparing Pearson and Spearman's Rank Correlation\n",
     "\n",
     "Now let's investigate the differences between Spearman and Pearson correlation coefficient.\n",
     "\n",
