--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -34,13 +34,13 @@
     "\n",
     "Shortcuts will speed up your writing. Pressing `h` toggles the keyboards shortcuts screen. You can see all commands by pressing &#8984;&#8679;f. I use the following shortcuts often and it will be useful if you can memorize them.\n",
     "\n",
-    "Symbol  | Name\n",
+    "Mac Windows  | Name \n",
     ":------: |:----:\n",
-    "&#8984; |Command, Cmd \n",
-    "&#8963; |Control, Ctl\n",
-    "&#8997; |Option Opt \n",
-    "&#8679; |Shift \n",
-    "&#8617; |Retrun\n",
+    "&#8984; or ⊞|Command, Windows\n",
+    "&#8963; or Ctrl|Control, Ctrl\n",
+    "&#8997; or Alt |Option, Alt \n",
+    "&#8679;|Shift \n",
+    "&#8617; or Enter|Retrun, Enter\n",
     "&#9251; |Space\n",
     "&#8677; |Tab  \n",
     "\n",
