--- a/Internal_Assessment_and_Extended_Essay_Ideas.ipynb
+++ b/Internal_Assessment_and_Extended_Essay_Ideas.ipynb
@@ -15,8 +15,8 @@
     "\n",
     "## Statistics\n",
     "### SL/HL\n",
-    "- Mean, mode, median, IQR\n",
-    "- Outliers, Quartile\n",
+    "- Mean, mode, median\n",
+    "- Outliers, Quartile, IQR\n",
     "- Standard deviation, Variance\n",
     "- Linear correlation of bivariate data, Pearson's product-moment correlation\n",
     "- Spearman's rank correlation\n",
