--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -911,11 +911,6 @@
        "    div.output_prompt {\n",
        "      display: none;\n",
        "      padding: 0;\n",
-       "    }\n",
-       "\n",
-       "    div.text_cell {\n",
-       "      padding: 0;\n",
-       "      margin: 0;\n",
        "    }\n",
        "\n",
        "    div.text_cell_render {\n",
@@ -958,7 +953,7 @@
        "    @page {\n",
        "      size: A4;\n",
        "    }\n",
-       "  </styl\n"
+       "  </style>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1078,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
