--- a/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
+++ b/7_Essential_Tips_for Writing_with_Jupyter_Notebook.ipynb
@@ -60,8 +60,13 @@
     "dd | Delete a cell selected\n",
     "&#8679; L | Toggle line numbers\n",
     "\n",
-    "<br>\n",
-    "\n",
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Line numbers on\n",
     "\n",
     "It is a good idea to have line numbers on in your Jupyter Notebook. When you have an error, it is easy to find the line. Besides the above shortcut, you can also use View > Toggle Line Numbers.\n",
@@ -74,6 +79,14 @@
     "A nice Jupyter theme for your Jupyter Notebook is like a nice pillow for your sleep. You are going to spend a lot of time writing with Jupyter Notebook, let's find a nice theme for your taste and modify font sizes. \n",
     "\n",
     "Let's install [JupyterThemes](https://github.com/dunovank/jupyter-themes). Open your terminal and type the followings."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<div style=\"page-break-after: always;\"></div>"
    ]
   },
   {
@@ -1073,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.2"
   },
   "toc": {
    "base_numbering": 1,
